--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,10 @@
   }
   /* ..... */
   /* Shared styles */
+    .body-margin{
+    margin-left: 160px;
+    margin-right: 160px;
+  } 
   .btn-primary{
        border-radius: 8px;
        border: none;
@@ -75,8 +79,8 @@
     gap: 64px;
     background-color: #C6E4D6;
     border-radius: 24px;
-    margin-left: 160px;
-    margin-right: 160px;
+    /* margin-left: 160px;
+    margin-right: 160px; */
     padding: 80px 100px;
   }
   .banner-content{
@@ -96,3 +100,65 @@
     align-items: center;
   }
 
+/* main section */
+main{
+    margin: 0 auto;
+    max-width: 1280px; 
+}
+ 
+.section-title{
+    font-size: 40px;
+    font-weight: bold;
+    color: #0E0E0E;
+    margin-top: 80px;
+    margin-bottom: 24px;
+}
+.section-description{
+    line-height: 24px;
+    color: rgba(14, 14, 14, 0.7);
+    margin-bottom: 32px;
+}
+.cards{
+    display: flex;
+    gap: 24px;
+    justify-content: space-evenly;
+}
+.card-1{
+     border-radius: 16px;
+     border: none;
+    background-color: rgba(84, 144, 245, 0.2);
+    padding: 32px;
+} 
+.card-2{
+    border-radius: 16px;
+    border: none;
+    background-color:rgba(198, 228, 214, 1) ;
+    padding: 32px;
+}
+.card-3{
+    border-radius: 16px;
+    border: none;
+    background-color: rgba(247, 235, 207, 1);   
+    padding: 24px;
+}
+.btn-1{
+    border-radius: 8px;
+    border: none;
+    background-color: #5490F5;
+    padding: 11px 20px;
+    color: #FFFFFF;
+}
+.btn-2{
+    border-radius: 8px;
+    border: none;
+    background-color: #09A15C;
+    padding: 11px 20px;
+    color: #FFFFFF;
+}
+.btn-3{
+    border-radius: 8px;
+    border: none;
+    background-color: #FFC239;
+    color: #FFFFFF;
+    padding: 11px 20px;
+}
