--- a/styles/style.css
+++ b/styles/style.css
@@ -246,6 +246,8 @@ main{
     margin: 0 auto;
     max-width: 1280px;
     margin-top: 80px;
+    background-color:rgba(14, 14, 14, 0.1);
+
 }
 .donation-container{
     margin: 0 auto;
@@ -312,11 +314,54 @@ main{
 
 /* Donate Button */
 .donate-button {
-    text-align: center; 
-    align-items: center;
+    font-size: 18px;
+    font-weight: 600px;
+    padding: 17px 34px;
+    background-color: #006A50;
+    color: #FFFFFF;
+    border-radius: 8px;
+    text-align: center;
     justify-content: center;  
 }
-
 .donate-button:hover {
     background-color: #004d00;
+}
+/* subscribe sytles  */
+.subscribe-container{
+    margin: 100px 80px;
+    background-color: #C6E4D6;
+    height: 300px;
+    padding: 80px 0px ;
+    text-align: center;
+    align-items: center;
+}
+.suscribe-title{
+    font-size: 40px;
+    font-weight: bold;
+    color: #0E0E0E;
+    text-align: center;
+    margin-bottom: 18px;
+}
+.sub-description{
+    line-height: 24px;
+    color: rgba(14, 14, 14, 0.7);
+    margin-bottom: 24px;
+}
+input{
+    display: inline-block;
+    width: 650px;
+    height: 50px;
+    margin-bottom: 24px;
+}
+.sub-button{
+    background-color: #006A50;
+    font-size: 18px;
+    font-weight: 600px;
+    padding: 17px 34px;
+    height: 58px;
+    color: #FFFFFF;
+}
+.text{
+    display: block;
+    color: rgba(14, 14, 14, 0.7);
 }
